[gd_scene load_steps=50 format=2]

[ext_resource path="res://Player/Weapon.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Anims/RightMembers.tres" type="Animation" id=3]
[ext_resource path="res://Anims/LeftMembers.tres" type="Animation" id=4]
[ext_resource path="res://Overlap/HurtBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Rifle.tscn" type="PackedScene" id=6]
[ext_resource path="res://Player/BSOD.tscn" type="PackedScene" id=7]
[ext_resource path="res://asset/epi.png" type="Texture" id=8]
[ext_resource path="res://assets/chouchou.ogg" type="AudioStream" id=9]
[ext_resource path="res://asset/prstart.ttf" type="DynamicFontData" id=10]

[sub_resource type="CapsuleMesh" id=1]

[sub_resource type="SpatialMaterial" id=23]

[sub_resource type="SphereMesh" id=2]

[sub_resource type="Gradient" id=24]
offsets = PoolRealArray( 0.535484, 0.541936, 0.554839, 0.56129, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0.619355, 0.619355, 0.619355, 1, 0.152828, 0.152828, 0.152828, 1, 1, 1, 1, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=25]
gradient = SubResource( 24 )

[sub_resource type="SpatialMaterial" id=26]
albedo_texture = SubResource( 25 )

[sub_resource type="SphereMesh" id=7]

[sub_resource type="SpatialMaterial" id=27]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="BoxShape" id=9]
extents = Vector3( 1.96406, 0.964602, 1 )

[sub_resource type="CylinderMesh" id=5]

[sub_resource type="SpatialMaterial" id=33]
albedo_color = Color( 0.733333, 0, 0, 1 )

[sub_resource type="CylinderMesh" id=6]

[sub_resource type="SpatialMaterial" id=34]
albedo_color = Color( 0, 0.0313726, 0.752941, 1 )

[sub_resource type="CapsuleMesh" id=3]

[sub_resource type="SphereMesh" id=4]

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("LeftLeg:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LeftArm:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "RunLEft"
tracks/0/type = "value"
tracks/0/path = NodePath("LeftLeg:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( -70, 0, 0 ), Vector3( 0, 0, 0 ), Vector3( 70, 0, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LeftArm:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 70, 0, 0 ), Vector3( 0, 0, 0 ), Vector3( -70, 0, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "idle_left"
length = 4.0

[sub_resource type="SpatialMaterial" id=35]
albedo_color = Color( 0.733333, 0, 0, 1 )

[sub_resource type="SpatialMaterial" id=36]
albedo_color = Color( 0, 0.0313726, 0.752941, 1 )

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("RightLeg:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "RunRight"
tracks/0/type = "value"
tracks/0/path = NodePath("RightLeg:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 70, 0, 0 ), Vector3( 0, 0, 0 ), Vector3( -70, 0, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=20]
resource_name = "idle_right"
length = 4.0

[sub_resource type="Animation" id=39]
resource_name = "End"
length = 9.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Camera:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.4, 8.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 1.99634, 1.15801 ), Vector3( 0, 1.99634, 6.48287 ), Vector3( -5.20737, 3.14155, 6.48287 ), Vector3( 0, 1.99634, 1.15801 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Camera:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5, 7.8, 8.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 180, 0 ), Vector3( -2, -25.483, 0 ), Vector3( -2, -25.483, 0 ), Vector3( 0, 180, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 8.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "end_animation_finished"
} ]
}

[sub_resource type="Animation" id=10]
resource_name = "Move"
length = 2.0
tracks/0/type = "animation"
tracks/0/path = NodePath("LeftAnims")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": PoolStringArray( "LeftMembers" ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "animation"
tracks/1/path = NodePath("../Right/RightAnims")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": PoolStringArray( "RightMembers" ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("LeftLeg:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LeftArm:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Right/RightLeg:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Right/RightArm:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 70, 180, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../Camera:translation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 1.99634, 1.15801 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../Camera:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "Run"
loop = true
tracks/0/type = "animation"
tracks/0/path = NodePath("LeftAnims")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": PoolStringArray( "RunLEft" ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "animation"
tracks/1/path = NodePath("../Right/RightAnims")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": PoolStringArray( "RunRight" ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=21]
resource_name = "idle"
tracks/0/type = "animation"
tracks/0/path = NodePath("../Right/RightAnims")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": PoolStringArray(  ),
"times": PoolRealArray(  )
}
tracks/1/type = "animation"
tracks/1/path = NodePath("LeftAnims")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": PoolStringArray(  ),
"times": PoolRealArray(  )
}

[sub_resource type="BoxShape" id=22]

[sub_resource type="DynamicFont" id=40]
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=41]
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=42]
size = 39
font_data = ExtResource( 10 )

[sub_resource type="CylinderMesh" id=28]

[sub_resource type="SpatialMaterial" id=29]
albedo_color = Color( 0.713726, 0.713726, 0.713726, 1 )

[sub_resource type="SpatialMaterial" id=30]
albedo_color = Color( 0.713726, 0.713726, 0.713726, 1 )

[sub_resource type="CubeMesh" id=31]

[sub_resource type="SpatialMaterial" id=32]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="QuadMesh" id=37]

[sub_resource type="SpatialMaterial" id=38]
albedo_texture = ExtResource( 8 )

[node name="Player" type="KinematicBody"]
collision_layer = 2
collision_mask = 33
script = ExtResource( 2 )

[node name="Body" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.110247, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 23 )

[node name="Head" type="MeshInstance" parent="."]
transform = Transform( 0.122112, 0, 0.992516, 0, 1, 0, -0.992516, 0, 0.122112, 0, 2.19714, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 26 )

[node name="Chouchou" type="MeshInstance" parent="."]
transform = Transform( 0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, 2.68626, -0.804466 )
mesh = SubResource( 7 )
material/0 = SubResource( 27 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 2.72549, 0, 0, 0, 1, 0, 0.480136, 0 )
shape = SubResource( 9 )

[node name="Left" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.638278, -1.21507, 0 )

[node name="LeftLeg" type="Spatial" parent="Left"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1.20587, -0.02, 0.0755157, 0 )

[node name="Foot" type="MeshInstance" parent="Left/LeftLeg"]
transform = Transform( 0.255539, 0, 0, 0, -4.60038e-09, -0.105245, 0, 0.507091, -2.21657e-08, 0, -0.92285, 0.304989 )
mesh = SubResource( 5 )
skeleton = NodePath("")
material/0 = SubResource( 33 )
__meta__ = {
"_editor_description_": "r'"
}

[node name="Leg" type="MeshInstance" parent="Left/LeftLeg"]
transform = Transform( 0.2, 0, 0, 0, 0.473021, 0, 0, 0, 0.2, 0, -0.376012, -0.00470651 )
mesh = SubResource( 6 )
skeleton = NodePath("")
material/0 = SubResource( 34 )

[node name="LeftArm" type="Spatial" parent="Left"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.318088, 1.86469, 0 )

[node name="Arm" type="MeshInstance" parent="Left/LeftArm"]
transform = Transform( 0.259748, 1.20489e-08, 0.275647, 0.150104, -2.08499e-08, -0.476992, 0, 0.3, -1.31134e-08, 0.531122, -0.607554, 0 )
mesh = SubResource( 3 )
skeleton = NodePath("../../..")
__meta__ = {
"_editor_description_": "	"
}

[node name="Shoulder" type="MeshInstance" parent="Left/LeftArm"]
transform = Transform( 0.259748, -0.150104, 0, 0.150104, 0.259748, 0, 0, 0, 0.3, 0.096131, 0.145175, 0 )
mesh = SubResource( 4 )
skeleton = NodePath("")

[node name="LeftAnims" type="AnimationPlayer" parent="Left"]
anims/LeftMembers = ExtResource( 4 )
anims/RESET = SubResource( 12 )
anims/RunLEft = SubResource( 13 )
anims/idle_left = SubResource( 19 )

[node name="Right" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.638, -1.215, 0 )

[node name="RightLeg" type="Spatial" parent="Right"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1.20587, -0.02, 0.0755157, 0 )

[node name="Foot" type="MeshInstance" parent="Right/RightLeg"]
transform = Transform( 0.255539, 0, 0, 0, -4.60038e-09, -0.105245, 0, 0.507091, -2.21657e-08, 0, -0.92285, 0.304989 )
mesh = SubResource( 5 )
skeleton = NodePath("")
material/0 = SubResource( 35 )
__meta__ = {
"_editor_description_": "r'"
}

[node name="Leg" type="MeshInstance" parent="Right/RightLeg"]
transform = Transform( 0.2, 0, 0, 0, 0.473021, 0, 0, 0, 0.2, 0, -0.376012, -0.00470651 )
mesh = SubResource( 6 )
skeleton = NodePath("")
material/0 = SubResource( 36 )

[node name="RightArm" type="Spatial" parent="Right"]
transform = Transform( -0.820217, -0.569089, 0.0581562, -0.570054, 0.821607, 0, -0.0477816, -0.0331522, -0.998308, -0.318, 1.865, 0 )

[node name="Arm" type="MeshInstance" parent="Right/RightArm"]
transform = Transform( 0.259748, 1.20489e-08, 0.275647, 0.150104, -2.08499e-08, -0.476992, 0, 0.3, -1.31134e-08, 0.531122, -0.607554, 0 )
mesh = SubResource( 3 )
skeleton = NodePath("../../..")
__meta__ = {
"_editor_description_": "	"
}

[node name="Shoulder" type="MeshInstance" parent="Right/RightArm"]
transform = Transform( 0.259748, -0.150104, 0, 0.150104, 0.259748, 0, 0, 0, 0.3, 0.096131, 0.145175, 0 )
mesh = SubResource( 4 )
skeleton = NodePath("")

[node name="Rifle" parent="Right/RightArm" instance=ExtResource( 6 )]
transform = Transform( -0.172473, 0.00535059, 0.101115, -0.101115, -0.0196548, -0.171433, 0.00535062, -0.19896, 0.0196548, 1.09292, -1.21843, -0.269091 )

[node name="Weapon" parent="Right/RightArm" instance=ExtResource( 1 )]
transform = Transform( -0.173203, 0.000383986, 0.100002, -0.0995084, -0.020529, -0.172269, 0.00993398, -0.198943, 0.0179695, 0.969863, -1.51959, -0.58264 )

[node name="RightAnims" type="AnimationPlayer" parent="Right"]
anims/RESET = SubResource( 14 )
anims/RightMembers = ExtResource( 3 )
anims/RunRight = SubResource( 15 )
anims/idle_right = SubResource( 20 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1.99634, 1.15801 )
fov = 96.2492
far = 8192.0

[node name="Cast" type="RayCast" parent="Camera"]
enabled = true
cast_to = Vector3( 0, 0, -100 )
collision_mask = 4
collide_with_areas = true

[node name="End" type="Spatial" parent="Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -100.017 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Left")
reset_on_save = false
anims/End = SubResource( 39 )
anims/LeftMembers = ExtResource( 4 )
anims/Move = SubResource( 10 )
anims/RESET = SubResource( 11 )
anims/RightMembers = ExtResource( 3 )
anims/Run = SubResource( 16 )
anims/idle = SubResource( 21 )

[node name="HurtBox" parent="." instance=ExtResource( 5 )]
visible = false
collision_layer = 16
collision_mask = 0

[node name="CollisionShape" parent="HurtBox" index="0"]
transform = Transform( 1.94407, 0, 0, 0, 2.69185, 0, 0, 0, 1, 0, 0.526036, 0 )
shape = SubResource( 22 )

[node name="Control" type="Control" parent="."]
margin_right = 160.0
margin_bottom = 48.0

[node name="info" type="ColorRect" parent="Control"]
anchor_top = 22.5
anchor_bottom = 22.5
margin_left = 1.0
margin_top = -92.0001
margin_right = 381.0
margin_bottom = -0.00012207
color = Color( 1, 1, 1, 0.572549 )

[node name="HP" type="Label" parent="Control/info"]
margin_left = 182.363
margin_right = 374.363
margin_bottom = 44.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 40 )
text = "HP : 10 / 10"
align = 1
valign = 1

[node name="Enemy" type="Label" parent="Control/info"]
margin_left = 150.0
margin_top = 21.597
margin_right = 342.0
margin_bottom = 65.597
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 40 )
text = "Kill : 10 / 10"
align = 1
valign = 1

[node name="Ammo" type="Label" parent="Control/info"]
margin_left = 150.0
margin_top = 47.0
margin_right = 358.0
margin_bottom = 92.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 41 )
text = "Ammo : 10 / 10"
align = 1
valign = 1

[node name="ColorRect" type="ColorRect" parent="Control/info"]
margin_left = -1.0
margin_top = -1.0
margin_right = 129.0
margin_bottom = 92.0
color = Color( 0, 0, 0, 0.686275 )

[node name="Name" type="Label" parent="Control/info/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -58.5
margin_top = -20.0
margin_right = 58.5
margin_bottom = 20.0
custom_fonts/font = SubResource( 42 )
text = "W.G"

[node name="aim" type="ColorRect" parent="Control"]
margin_left = 957.0
margin_top = 537.0
margin_right = 963.0
margin_bottom = 543.0
color = Color( 0, 0, 0, 1 )

[node name="AieScreen" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 1, 0, 0, 0.235294 )

[node name="BSOD" parent="." instance=ExtResource( 7 )]

[node name="Glasses" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.73406, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Glasses"]
transform = Transform( 0.2, 8.35662e-23, -1.09039e-29, 0, -2.92866e-09, -0.2, -2.49451e-22, 0.067, -8.74228e-09, -0.258023, -1.44326, 1.04776 )
mesh = SubResource( 28 )
material/0 = SubResource( 29 )

[node name="MeshInstance2" type="MeshInstance" parent="Glasses"]
transform = Transform( 0.2, 8.35662e-23, -1.09039e-29, 0, -2.92866e-09, -0.2, -2.49451e-22, 0.067, -8.74228e-09, 0.258, -1.443, 1.048 )
mesh = SubResource( 28 )
material/0 = SubResource( 30 )

[node name="MeshInstance3" type="MeshInstance" parent="Glasses"]
transform = Transform( 0.228174, 0, 0, 0, 0.0482204, 0, 0, 0, 0.0642234, 0, -1.31342, 1.04893 )
mesh = SubResource( 31 )
material/0 = SubResource( 32 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0160041, 0.0169497, 1.09477 )
mesh = SubResource( 37 )
material/0 = SubResource( 38 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.0160041, 0.0169497, -1.00499 )
mesh = SubResource( 37 )
material/0 = SubResource( 38 )

[node name="Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]

[editable path="HurtBox"]
